objects/Account.object
<CustomObject>
    <fields>
        <fullName>EI__c</fullName>
        <description>sssd fgd</description>
        <label>EI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <description>doc test 04dfrr</description>
        <formula>Preferred_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>non doc 0</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mechi__c</fullName>
        <description>tyg</description>
        <label>Mechi</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>rt</description>
        <label>Preferred Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signup_Date__c</fullName>
        <label>Signup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>chkk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>chkk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>new_date__c</fullName>
        <description>rt</description>
        <label>new date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ty__c</fullName>
        <label>ty</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Phone_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Phone)</errorConditionFormula>
        <errorMessage>Phone must be completed</errorMessage>
    </validationRules>
</CustomObject>